# Orbiter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/orbiter/: cli.py
src/orbiter/core/: maneuvers.py  propagate.py  states.py
src/orbiter/core/constants/: AstroConstants.py  RotationMatrices.py
src/orbiter/core/constants/conversions/: units.py
src/orbiter/core/constants/conversions/frames/: TopocentricHorizon.py
src/orbiter/core/maneuvers/: Hohmann.py  PlaneChange.py
src/orbiter/core/orbit-determination/: Gauss-Problem.py
src/orbiter/core/propagation/: TheKeplerProblem.py
src/orbiter/core/time/: TimeOfFlightToPosition.py  UniversalTimeOfFlight.py
src/orbiter/core/utils/: matrix_ops.py
src/orbiter/ui/: wizard.css  wizard.py  wizard.tcss
src/orbiter/ui/panes/: constants.py  maneuvers.py  propagation.py
src/orbiter/ui/panes/maneuvers/: HohmannPane.py  PlaneChangePane.py
src/orbiter/ui/panes/propagation/: TheKeplerProblemPane.py
src/orbiter/ui/panes/time/: TimeOfFlightToPositionPane.py  UniversalTimeOfFlightPane.py
tests/: test_frames.py  test_hohmann.py  test_kepler.py  test_matrix_ops.py  test_plane_change.py  test_states.py  test_time_of_flight.py  test_units.py
